--- a/main.tex
+++ b/main.tex
@@ -678,23 +678,23 @@ They can be contiguous by field with \only<1>{\textcolor{red}{counts}}\only<2,3,
 \vspace{-0.6 cm}
 \begin{verbatim}
             name          ra        dec    dist  mass radius planets                                               
-                                                                name     orbit   eccen       period    mass radius
-0    0    11 Com  185.179276  17.792868   93.37  2.70  19.00       b  1.290000  0.2310   326.03000  19.4000    NaN
-1    0    11 UMi  229.274536  71.823898  125.72  2.78  29.79       b  1.530000  0.0800   516.21997  14.7400    NaN
-2    0    14 And  352.822571  39.236198   75.59  2.20  11.00       b  0.830000  0.0000   185.84000   4.8000    NaN
-3    0    14 Her  242.601303  43.817646   17.94  0.90   0.93       b  2.930000  0.3700  1773.40002   4.6600    NaN
-4    0  16 Cyg B  295.466553  50.517525   21.41  1.08   1.13       b  1.660000  0.6800   798.50000   1.7800    NaN
-5    0    18 Del  314.608063  10.839286   76.38  2.30   8.50       b    2.600   0.080    993.30000  10.3000    NaN
-6    0  1RXS J16  242.376268 -21.083036  145.00  0.85   0.00       b  330.000     NaN          NaN   8.0000    NaN
-7    0    24 Boo  217.157547  49.844852   96.25  0.99  10.64       b    0.190   0.042     30.35060   0.9100    NaN
-8    0    24 Sex  155.868210  -0.902244   72.21  1.54   4.90       b    1.333   0.090    452.80000   1.9900    NaN
-     1    24 Sex  155.868210  -0.902244   72.21  1.54   4.90       c    2.080   0.290    883.00000   0.8600    NaN
-...          ...         ...        ...     ...   ...    ...     ...       ...     ...         ...      ...    ...
-2932 0   tau Gem  107.784882  30.245163  112.64  2.30  26.80       b  1.170000  0.0310   305.500000 20.6000    NaN
-2933 0   ups And   24.199345  41.405460   13.41  1.30   1.56       b  0.059222  0.0215     4.617033  0.6876    NaN
-     1   ups And   24.199345  41.405460   13.41  1.30   1.56       c  0.827774  0.2596   241.258000  1.9810    NaN
-     2   ups And   24.199345  41.405460   13.41  1.30   1.56       d  2.513290  0.2987  1276.460000  4.1320    NaN
-2934 0    xi Aql  298.562012   8.461452   56.27  2.20  12.00       b  0.680000  0.0000   136.750000  2.8000    NaN
+                                                                name      orbit   eccen      period     mass radius
+0    0    11 Com  185.179276  17.792868   93.37  2.70  19.00       b   1.290000  0.2310   326.03000  19.4000    NaN
+1    0    11 UMi  229.274536  71.823898  125.72  2.78  29.79       b   1.530000  0.0800   516.21997  14.7400    NaN
+2    0    14 And  352.822571  39.236198   75.59  2.20  11.00       b   0.830000  0.0000   185.84000   4.8000    NaN
+3    0    14 Her  242.601303  43.817646   17.94  0.90   0.93       b   2.930000  0.3700  1773.40002   4.6600    NaN
+4    0  16 Cyg B  295.466553  50.517525   21.41  1.08   1.13       b   1.660000  0.6800   798.50000   1.7800    NaN
+5    0    18 Del  314.608063  10.839286   76.38  2.30   8.50       b   2.600000  0.0800   993.30000  10.3000    NaN
+6    0  1RXS J16  242.376268 -21.083036  145.00  0.85   0.00       b 330.000000     NaN         NaN   8.0000    NaN
+7    0    24 Boo  217.157547  49.844852   96.25  0.99  10.64       b   0.190000  0.0420    30.35060   0.9100    NaN
+8    0    24 Sex  155.868210  -0.902244   72.21  1.54   4.90       b   1.333000  0.0900   452.80000   1.9900    NaN
+     1    24 Sex  155.868210  -0.902244   72.21  1.54   4.90       c   2.080000  0.2900   883.00000   0.8600    NaN
+...          ...         ...        ...     ...   ...    ...     ...        ...     ...         ...      ...    ...
+2932 0   tau Gem  107.784882  30.245163  112.64  2.30  26.80       b   1.170000  0.0310   305.50000  20.6000    NaN
+2933 0   ups And   24.199345  41.405460   13.41  1.30   1.56       b   0.059222  0.0215     4.61703   0.6876    NaN
+     1   ups And   24.199345  41.405460   13.41  1.30   1.56       c   0.827774  0.2596   241.25800   1.9810    NaN
+     2   ups And   24.199345  41.405460   13.41  1.30   1.56       d   2.513290  0.2987  1276.46000   4.1320    NaN
+2934 0    xi Aql  298.562012   8.461452   56.27  2.20  12.00       b   0.680000  0.0000   136.75000   2.8000    NaN
 
 [3933 rows x 12 columns]
 \end{verbatim}
@@ -704,6 +704,61 @@ They can be contiguous by field with \only<1>{\textcolor{red}{counts}}\only<2,3,
 \end{columns}
 \end{frame}
 
+\begin{frame}[fragile]{Relationship to Pandas}
+\large
+\vspace{0.35 cm}
+\begin{columns}
+\column{0.5\linewidth}
+\textcolor{darkblue}{Jaggedness $\to$ MultiIndex rows}
+
+\small
+\vspace{-0.2 cm}
+\begin{minted}{python}
+>>> awkward.topandas(
+...   awkward.fromiter(
+...     [[[1.1, 2.2], [], [3.3]],
+...      [],
+...      [[4.4], [5.5, 6.6]],
+...      [[7.7]],
+...      [[8.8]]]
+...   ), flatten=True)
+
+0  0  0    1.1
+      1    2.2
+   2  0    3.3
+2  0  0    4.4
+   1  0    5.5
+      1    6.6
+3  0  0    7.7
+4  0  0    8.8
+\end{minted}
+
+\column{0.5\linewidth}
+\textcolor{darkblue}{Nested records $\to$ MultiIndex columns}
+\small
+\vspace{-0.2 cm}
+\begin{minted}{python}
+>>> awkward.topandas(
+...   awkward.fromiter([
+...     {"I":
+...        {"a": _, "b": {"i": _}},
+...      "II":
+...        {"x": {"y": {"z": _}}}}
+...     for _ in range(0, 50, 10)]
+...   ), flatten=True)
+     I        II
+     a    b    x
+          i    y
+               z
+0    0    0    0
+1   10   10   10
+2   20   20   20
+3   30   30   30
+4   40   40   40
+\end{minted}
+
+\end{columns}
+\end{frame}
 
 
 
